# Moreno.Text

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  build.bat  build.sh  minimap_range_test.cpp  vcpkg.json
.github/workflows/: ci.yml
Assets/: icon_data.h  moreno_text.rc
src/AI/: MCPClient.h
src/Commands/: KeyBindingManager.h
src/Core/: Application.cpp  Application.h  Buffer.cpp  Buffer.h  FileBackedBuffer.cpp  FileBackedBuffer.h  Rope.cpp  Rope.h  Selection.cpp  Selection.h  Version.h.in  View.h  Window.h
src/Platform/: Platform.cpp  Platform.h
src/Plugin/: PluginHost.cpp  PluginHost.h  PluginHostMain.cpp
src/Renderer/: FontAtlas.cpp  FontAtlas.h  GLRenderer.cpp  GLRenderer.h
src/Settings/: SettingsManager.h
src/Syntax/: SyntaxHighlighter.cpp  SyntaxHighlighter.h  language.inc  lexer.inc  lib.c  parser.inc  query.inc  subtree.h  tree.inc  tree_sitter_c.c  tree_sitter_markdown.c  tree_sitter_markdown_scanner.c  unicode.h  wasm_store.inc
src/Terminal/: TerminalManager.h
src/Theme/: ThemeEngine.h
src/UI/: Gutter.cpp  Gutter.h  MenuBar.cpp  MenuBar.h  Minimap.cpp  Minimap.h  SidebarMenu.h  StatusBar.cpp  StatusBar.h  Titlebar.cpp  Titlebar.h
tests/: filebackedbuffer_test.cpp  fontatlas_clip_test.cpp  pluginhost_test.cpp  sidebar_menu_test.cpp
