cmake_minimum_required(VERSION 3.20)
project(MorenoText VERSION 0.1.0 LANGUAGES CXX C)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
find_package(SDL2 CONFIG REQUIRED)
find_package(Freetype CONFIG REQUIRED)
find_package(GLEW CONFIG REQUIRED)
find_package(glm CONFIG REQUIRED)
find_package(nlohmann_json CONFIG REQUIRED)
file(GLOB_RECURSE SOURCES CONFIGURE_DEPENDS src/*.cpp src/*.c)
file(GLOB_RECURSE HEADERS CONFIGURE_DEPENDS src/*.h src/*.hpp)
add_executable(moreno_text ${SOURCES} ${HEADERS})
if(WIN32)
    target_sources(moreno_text PRIVATE ${CMAKE_SOURCE_DIR}/Assets/moreno_text.rc)
endif()
target_include_directories(moreno_text PRIVATE ${CMAKE_SOURCE_DIR}/src ${CMAKE_SOURCE_DIR}/third_party ${CMAKE_SOURCE_DIR}/Assets)
target_link_libraries(moreno_text PRIVATE SDL2::SDL2 SDL2::SDL2main Freetype::Freetype GLEW::GLEW glm::glm nlohmann_json::nlohmann_json)
if(WIN32)
    target_link_libraries(moreno_text PRIVATE opengl32 ole32 shell32 dwmapi)
elseif(APPLE)
    find_library(OPENGL_LIB OpenGL REQUIRED)
    target_link_libraries(moreno_text PRIVATE ${OPENGL_LIB})
else()
    target_link_libraries(moreno_text PRIVATE GL)
endif()
set_target_properties(moreno_text PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/bin")
if(MSVC)
    target_compile_options(moreno_text PRIVATE /W4 /permissive- /D_CRT_SECURE_NO_WARNINGS /wd4100)
    target_compile_options(moreno_text PRIVATE $<$<CONFIG:Release>:/O2 /GL>)
    target_link_options(moreno_text PRIVATE $<$<CONFIG:Release>:/LTCG /DEBUG:NONE /OPT:REF /OPT:ICF>)
else()
    target_compile_options(moreno_text PRIVATE -Wall -Wextra -Wpedantic)
endif()
