cmake_minimum_required(VERSION 3.20)
project(MorenoText VERSION 0.1.0 LANGUAGES CXX C)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
set(MORENO_BUILD_VERSION "${PROJECT_VERSION}" CACHE STRING "Moreno Text build version")
configure_file(${CMAKE_SOURCE_DIR}/src/Core/Version.h.in ${CMAKE_BINARY_DIR}/generated/Core/Version.h @ONLY)
find_package(SDL2 CONFIG REQUIRED)
find_package(Freetype CONFIG REQUIRED)
find_package(GLEW CONFIG REQUIRED)
find_package(glm CONFIG REQUIRED)
find_package(nlohmann_json CONFIG REQUIRED)
find_package(ZLIB REQUIRED)
file(GLOB_RECURSE SOURCES CONFIGURE_DEPENDS src/*.cpp src/*.c)
file(GLOB_RECURSE HEADERS CONFIGURE_DEPENDS src/*.h src/*.hpp)
add_executable(moreno_text WIN32 ${SOURCES} ${HEADERS})
add_executable(moreno_plugin_host moreno_plugin_host.cpp)
add_dependencies(moreno_text moreno_plugin_host)
if(WIN32)
    target_sources(moreno_text PRIVATE ${CMAKE_SOURCE_DIR}/Assets/moreno_text.rc)
endif()
target_include_directories(moreno_text PRIVATE ${CMAKE_SOURCE_DIR}/src ${CMAKE_SOURCE_DIR}/third_party ${CMAKE_SOURCE_DIR}/Assets ${CMAKE_BINARY_DIR}/generated)
target_link_libraries(moreno_text PRIVATE $<TARGET_NAME_IF_EXISTS:SDL2::SDL2main> SDL2::SDL2 Freetype::Freetype GLEW::GLEW glm::glm nlohmann_json::nlohmann_json ZLIB::ZLIB)
if(WIN32)
    target_link_libraries(moreno_text PRIVATE opengl32 ole32 shell32 dwmapi)
elseif(APPLE)
    find_library(OPENGL_LIB OpenGL REQUIRED)
    target_link_libraries(moreno_text PRIVATE ${OPENGL_LIB})
else()
    target_link_libraries(moreno_text PRIVATE GL)
endif()
set_target_properties(moreno_text PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/bin")
set_target_properties(moreno_plugin_host PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/bin")
include(CTest)
if(BUILD_TESTING)
    add_executable(minimap_range_test tests/minimap_range_test.cpp)
    target_include_directories(minimap_range_test PRIVATE ${CMAKE_SOURCE_DIR}/src)
    add_test(NAME minimap_range_test COMMAND minimap_range_test)
    add_executable(fontatlas_clip_test tests/fontatlas_clip_test.cpp)
    target_include_directories(fontatlas_clip_test PRIVATE ${CMAKE_SOURCE_DIR}/src)
    target_link_libraries(fontatlas_clip_test PRIVATE GLEW::GLEW)
    add_test(NAME fontatlas_clip_test COMMAND fontatlas_clip_test)
    add_executable(sidebar_menu_test tests/sidebar_menu_test.cpp)
    target_include_directories(sidebar_menu_test PRIVATE ${CMAKE_SOURCE_DIR}/src)
    add_test(NAME sidebar_menu_test COMMAND sidebar_menu_test)
    add_executable(pluginhost_test tests/pluginhost_test.cpp src/Plugin/PluginHost.cpp)
    target_include_directories(pluginhost_test PRIVATE ${CMAKE_SOURCE_DIR}/src)
    target_link_libraries(pluginhost_test PRIVATE nlohmann_json::nlohmann_json ZLIB::ZLIB)
    add_test(NAME pluginhost_test COMMAND pluginhost_test)
    add_executable(filebackedbuffer_test tests/filebackedbuffer_test.cpp src/Core/FileBackedBuffer.cpp)
    target_include_directories(filebackedbuffer_test PRIVATE ${CMAKE_SOURCE_DIR}/src)
    add_test(NAME filebackedbuffer_test COMMAND filebackedbuffer_test)
endif()
if(MSVC)
    target_compile_options(moreno_text PRIVATE /W4 /permissive- /D_CRT_SECURE_NO_WARNINGS /wd4100)
    target_compile_options(moreno_plugin_host PRIVATE /W4 /permissive- /D_CRT_SECURE_NO_WARNINGS /wd4100)
    target_compile_options(moreno_text PRIVATE $<$<CONFIG:Release>:/O2 /GL>)
    target_compile_options(moreno_plugin_host PRIVATE $<$<CONFIG:Release>:/O2 /GL>)
    target_link_options(moreno_text PRIVATE $<$<CONFIG:Release>:/LTCG /DEBUG:NONE /OPT:REF /OPT:ICF>)
    target_link_options(moreno_plugin_host PRIVATE $<$<CONFIG:Release>:/LTCG /DEBUG:NONE /OPT:REF /OPT:ICF>)
else()
    target_compile_options(moreno_text PRIVATE -Wall -Wextra -Wpedantic)
    target_compile_options(moreno_plugin_host PRIVATE -Wall -Wextra -Wpedantic)
endif()
